--- a/packages/clients/wh/university-submission-website/src/styles/global.css
+++ b/packages/clients/wh/university-submission-website/src/styles/global.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-h1, h2 {
+h1,
+h2 {
   @apply font-display;
 }
 
@@ -44,7 +45,6 @@ html {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
