fix: update component locales from Italian to German
Update the language keys and translations in PostLayout.astro to use German instead of Italian

--- a/packages/clients/wh/university-submission-website/src/layouts/PostLayout.astro
+++ b/packages/clients/wh/university-submission-website/src/layouts/PostLayout.astro
@@ -25,9 +25,9 @@ interface ComponentLocales {
 }
 
 const componentLocales: ComponentLocales = {
-    it: {
-        writtenBy: "Scritto da: ",
-        writtenAt: "nel",
+    de: {
+        writtenBy: "Geschrieben von: ",
+        writtenAt: "am",
     },
     en: {
         writtenBy: "Written by: ",
