fix: replace console log message with more appropriate text

--- a/packages/clients/wh/university-submission-website/src/components/primitives/Share.astro
+++ b/packages/clients/wh/university-submission-website/src/components/primitives/Share.astro
@@ -45,7 +45,7 @@ const availableShare = [
 							url: window.location.href,
 						})
 						.then(() => {
-							console.log("Grazie per la Sharesione!");
+							console.log("Share successful");
 						})
 						.catch(console.error);
 				} else {
